[tool.poetry]
name = "nonebot_plugin_ayaka_test"
version = "0.0.1b0"
description = "ayaka_test"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bridgeL/nonebot-plugin-ayaka-test"
packages = [
    { include = "ayaka_test", from = ".." },
]


[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
